--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@ I used spans to create an empty space to be filled with user input and scores --
 <h1>The Psychic Game</h1>
 
 <p>Guess what letter I'm thinking of</p>
-<p>Wins:<span class="wins"></span></p>
-<p>Losses:<span class="losses"></span></p>
-<p>Guesses Left:<span class="guessesleft">9</span></p>
-<p>Your guesses so far:<span class="keyspressed"></span></p>
+<p>Wins:<span id="wins"></span></p>
+<p>Losses:<span id="losses"></span></p>
+<p>Guesses Left:<span id="guessesleft">9</span></p>
+<p>Your guesses so far:<span id="keyspressed"></span></p>
     
 <script src="assets/javascript/game.js"></script>
 
