--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ I used spans to create an empty space to be filled with user input and scores --
 <p>Guess what letter I'm thinking of</p>
 <p>Wins:<span id="wins"></span></p>
 <p>Losses:<span id="losses"></span></p>
-<p>Guesses Left:<span id="guessesleft">9</span></p>
+<p>Guesses Left:<span id="guessesleft"></span></p>
 <p>Your guesses so far:<span id="keyspressed"></span></p>
     
 <script src="assets/javascript/game.js"></script>
